--- a/beispiel-02/index.html
+++ b/beispiel-02/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
+
 <html>
+
 <head class="no-skrollr">
 	<meta charset="utf-8">
-	<!-- <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"> -->
-	<title>Beispiel 02</title>
+	<title>IP-Strorytelling / Beispiel 02</title>
 
 	<link href="main.css" rel="stylesheet" type="text/css">
 	 <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.js"></script>
@@ -30,7 +31,6 @@
 		<!-- <div class="obj">obj</div> -->
 
 	</div>
-
 
 	<script type="text/javascript" src="skrollr.js"></script>
 	<script type="text/javascript">
