--- a/beispiel-02/index.html
+++ b/beispiel-02/index.html
@@ -3,61 +3,82 @@
 <html>
 
 <head class="no-skrollr">
-	<meta charset="utf-8">
-	<title>IP-Strorytelling / Beispiel 02</title>
+    <meta charset="utf-8">
+    <title>IP-Strorytelling / Beispiel 02</title>
 
-	<link href="main.css" rel="stylesheet" type="text/css">
-	 <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.js"></script>
+    <link href="stylesheet/main.css" rel="stylesheet" type="text/css">
+    <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+	<script type="text/javascript" src="javascript/jquery.transit.js"></script>
+
 </head>
 
 <body>
-	<div id="skrollr-body">
-		
-		<div class="scrollVal">Scroll-Y</div>
+    <div id="skrollr-body">
 
-		<div class="obj">obj</div>	
-		
-<!-- 	<div class="obj-skrollr"
-			data-anchor-target="#sec1"
-			data-top=		 "background-color:rgb(0,255,0); transform[linear]:translateX(0px);"
-			data-top-bottom= "background-color:rgb(0,0,255); transform[linear]:translateX(1000px);" 
-		>obj</div>	
- -->
-		<div class="obj-skrollr"
+        <div class="scrollVal">Scroll-Y</div>
+
+        <div class="obj">obj</div>
+
+        <!-- <div class="obj-skrollr" data-anchor-target="#sec1" >obj</div> -->
+
+		<div 
+			class="obj-skrollr" 	
+			data-anchor-target="#sec1" 
+			data-top="background-color:rgb(0,255,0); transform[linear]:translateX(0px);" 
+			data-top-bottom="background-color:rgb(0,0,255); transform[linear]:translateX(1000px);"
+		>obj
+		</div>
+
+        <!-- 		
+        	<div class="obj-skrollr"
 			data-top=		 "background-color:rgb(0,255,0); transform[linear]:translateX(0px);"
 			data-top-bottom= "background-color:rgb(0,0,255); transform[linear]:translateX(1000px);" 
 			>
-		</div>
+		</div> -->
 
-		<div class="section0" id="sec0">Section 0</div>
-		<div class="section1" id="sec1">Section 1</div>
- 		<div class="section2" id="sec2">Section 2</div>
-		<div class="section3" id="sec3">Section 3</div>
+        <div class="section0" id="sec0">Section 0</div>
+        <div class="section1" id="sec1">Section 1</div>
+        <div class="section2" id="sec2">Section 2</div>
+        <div class="section3" id="sec3">Section 3</div>
 
-	</div>
+    </div>
 
-	<script type="text/javascript" src="skrollr.js"></script>
-	<script type="text/javascript">
-		var s = skrollr.init();
+    <script type="text/javascript" src="javascript/skrollr.js"></script>
+    <script type="text/javascript">
 
-		$( window ).scroll(function (event) {
 
-		    scrollY = $(window).scrollTop();
-		    		    
-		 	$( ".scrollVal" ).html( "Scroll-Y = " + scrollY );
-			
-			if (scrollY >= 0) {
-				$('.obj').css({'top':scrollY+60+'px'});
-			} 
-			if (scrollY >= 200) {
-				$('.obj').css({'width':scrollY+60+'px'});
-			}
-			if (scrollY >= 300) {
-				$('.obj').css({'hight':scrollY+60+''});
-			}
-		});
-		
-	</script>
+	    var s = skrollr.init();
+
+		//$(".obj-skrollr").attr("data-top", "australian");
+		$('.obj-skrollr').data('top', "background-color: rgb(0,255,0); transform[linear]:translateX(0px);" );
+		$('.obj-skrollr').data('top-bottom', "background-color: rgb(255,0,0); transform[linear]:translateX(1000px);" );
+		console.log( $('.obj-skrollr').eq(0).data('top') );
+		console.log( $('.obj-skrollr').eq(0).data('top-bottom') );
+		//skrollr.refresh();  ???
+
+
+	    $(window).scroll(function(event) {
+
+	        var scrollY = $(window).scrollTop();
+
+		    $(".scrollVal").html("Scroll-Y = " + scrollY);
+		    if (scrollY >= 0) {
+		        // $('.obj').css('-webkit-transform',"translate3d(0px, "+scrollY+"px, 0px)");
+		        // $('.obj').css('top', scrollY + 60);
+		        $('.obj').css({ y: scrollY  });
+		        // $('.obj').css({ scale: -scrollY*.0009999  });
+		    }
+		    if (scrollY >= 200) {
+		        // $('.obj').css('width', scrollY + 60);
+		        $('.obj').css({ width: scrollY  });
+		    }
+		    if (scrollY >= 300) {
+		        // $('.obj').css('hight', scrollY + 60);
+		        $('.obj').css({ hight: scrollY  });
+		    }
+	    });
+
+    </script>
 </body>
 
 </html>
