--- a/beispiel-02/index.html
+++ b/beispiel-02/index.html
@@ -7,7 +7,7 @@
     <title>IP-Strorytelling / Beispiel 02</title>
 
     <link href="stylesheet/main.css" rel="stylesheet" type="text/css">
-    <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+    <script type="text/javascript" src="javascript/jquery-1.9.1.min.js"></script>
 	<script type="text/javascript" src="javascript/jquery.transit.js"></script>
 
 </head>
@@ -18,8 +18,6 @@
         <div class="scrollVal">Scroll-Y</div>
 
         <div class="obj">obj</div>
-
-        <!-- <div class="obj-skrollr" data-anchor-target="#sec1" >obj</div> -->
 
 		<div 
 			class="obj-skrollr" 	
@@ -49,31 +47,18 @@
 
 	    var s = skrollr.init();
 
-		//$(".obj-skrollr").attr("data-top", "australian");
-		$('.obj-skrollr').data('top', "background-color: rgb(0,255,0); transform[linear]:translateX(0px);" );
-		$('.obj-skrollr').data('top-bottom', "background-color: rgb(255,0,0); transform[linear]:translateX(1000px);" );
-		console.log( $('.obj-skrollr').eq(0).data('top') );
-		console.log( $('.obj-skrollr').eq(0).data('top-bottom') );
-		//skrollr.refresh();  ???
-
-
 	    $(window).scroll(function(event) {
 
 	        var scrollY = $(window).scrollTop();
 
 		    $(".scrollVal").html("Scroll-Y = " + scrollY);
 		    if (scrollY >= 0) {
-		        // $('.obj').css('-webkit-transform',"translate3d(0px, "+scrollY+"px, 0px)");
-		        // $('.obj').css('top', scrollY + 60);
 		        $('.obj').css({ y: scrollY  });
-		        // $('.obj').css({ scale: -scrollY*.0009999  });
 		    }
 		    if (scrollY >= 200) {
-		        // $('.obj').css('width', scrollY + 60);
 		        $('.obj').css({ width: scrollY  });
 		    }
 		    if (scrollY >= 300) {
-		        // $('.obj').css('hight', scrollY + 60);
 		        $('.obj').css({ hight: scrollY  });
 		    }
 	    });
